# ai4-cli

./: CHANGELOG.md  README.md  pyproject.toml  tox.ini
src/ai4_cli/: __init__.py  cli.py  exceptions.py  modules.py  oidc.py  utils.py
src/ai4_cli/cli/: __init__.py  deployments.py  modules.py
src/ai4_cli/client/: __init__.py  client.py  deployments.py  modules.py
src/ai4_cli/tests/: test_cli.py  test_client.py
