[tool.poetry]
name = "ai4-cli"
version = "0.1.0"
description = "AI4 CLI tools and API library"
authors = [
    "Alvaro Lopez Garcia <aloga@ifca.unican.es>",
]

license = "GPL-3"
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

homepage = "https://github.com/ai4os/ai4-cli"
repository = "https://github.com/ai4os/ai4-cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ai4os/ai4-clie/issues"

[tool.poetry.scripts]
ai4-cli = "ai4_cli.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
